# AmapService

./: .gitignore  CLAUDE.md  README.md  amap-service.spec  pyproject.toml  启动-接口.bat  启动-服务.bat
.claude/: settings.local.json
amap_service/: __init__.py  __main__.py  cli.py  paths.py
amap_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
amap_service/api/: app.py  deps.py  envelope.py  routes.py  schemas.py
amap_service/cache/: client.py
amap_service/clients/: base.py  transit.py
amap_service/config/: loader.py  schema.py
amap_service/db/: engine.py  migrate.py  repositories.py  schema.py
amap_service/parsing/: road_network.py  traffic.py  transit.py
amap_service/pipelines/: road_network.py  section_build.py  traffic.py  transit.py  transit_build.py
amap_service/publish/: client.py  encoders.py  publisher.py
amap_service/reports/: match_report.py
amap_service/scheduler/: runner.py
amap_service/sdk/: __init__.py  connector.py  conversion.py  geometry.py  matcher.py  section_compute.py  station_traffic.py  traffic_query.py
amap_service/views/: line_views.py  static_cache.py  traffic_lookup.py
config/: config.yaml.example
docs/: 命令说明.md  打包说明.md  线路路段空洞修复.md
docs/diagrams/: 01-系统架构思维导图.html  02-数据流向图.html  03-线路转路网过程图.html  index.html
proto/: line_traffic.proto
scripts/: gen_proto.sh
tests/: test_cli.py  test_cli_default_config.py  test_engine_path.py  test_main_module.py  test_packaging_deps.py  test_paths.py  test_smoke.py
tests/api/: test_app.py  test_deps.py  test_envelope.py  test_schemas.py
tests/cache/: test_client.py
tests/clients/: test_base.py  test_transit.py
tests/config/: test_loader.py  test_schema.py
tests/db/: test_engine.py  test_migrate.py  test_repositories.py  test_schema.py  test_section_link.py  test_transit_raw.py  test_transit_segment.py  test_transit_station.py
tests/parsing/: test_road_network.py  test_traffic.py  test_transit.py  test_transit_select.py  test_transit_tracks.py
tests/pipelines/: test_road_network.py  test_traffic.py  (+4 more)
(+37 files in other folders)
