[project]
name = "amap-service"
version = "0.1.0"
description = "Amap map-data landing service (road network, traffic, transit, GPS↔link SDK)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "PyYAML>=6",
  "SQLAlchemy>=2",
  "APScheduler>=3.10,<4",
  "httpx>=0.27",
  "ijson>=3.2",
  "redis>=5",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "paho-mqtt>=1.6,<2",
  "protobuf>=5,<6",  # 生成的 *_pb2 内嵌 5.x runtime 版本校验,4.x 无 runtime_version 模块会 ImportError
  "openpyxl>=3.1",
]

[project.scripts]
amap-service = "amap_service.cli:main"

[project.optional-dependencies]
mysql = ["PyMySQL>=1.1"]
dev = ["pytest>=8", "fakeredis>=2", "grpcio-tools>=1.60"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["amap_service*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# importlib mode avoids basename collisions (e.g. tests/config/test_schema.py vs tests/db/test_schema.py)
addopts = "--import-mode=importlib"
